--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #F4F4F4;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-.App-link {
-  color: #61dafb;
+button {
+  margin: 20px auto;
+  color: black;
+  background: #F4C4F3;
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #3333;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 250px;
+  height: 250px;
+  margin: 10px;
+  border-radius: 50%;
+  border: 1px solid #DEDEDE;
+}
+.app__user {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.app__icons {
+  display: flex;
+  margin-top: 15px;
+  justify-content: center;
+  align-items: center;
+}
+.app__icons .fas {
+  margin: 0 30px;
+  transition: all 0.2s ease;
+}
+.app__icons .fas:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
