--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: #ef32d9;
+  background-color: #F4F4F4;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 button {
